#27765 Bugfix: calender not overlapping menu on 'my page' anymore (fixed by adding z-index to table columns)

--- a/app/assets/stylesheets/content/_calendar.sass
+++ b/app/assets/stylesheets/content/_calendar.sass
@@ -83,10 +83,10 @@ table.cal
 
   .issue
     vertical-align: middle
+    z-index: 1
 
 p.legend.cal
   margin-bottom: 0
   .icon
     @include setCalendarIconValues()
     vertical-align: middle
-
